# ch-id-card-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  handlers.py  predict_existence.py  settings.py
src/predict/: coords.py  existence.py
src/utils/: http.py  image.py
